@@ -674,6 +674,7 @@ help Zline {
 	" Example: ZLINE *@127.0.0.1 Abuse (Adds a permanent Z:line)";
 	"          ZLINE *@127.0.0.1 2d Abuse (Adds a Z:line for 2 days)";
 	"          ZLINE -*@127.0.0.1";
+	" NOTE: requires the can_zline oper flag";
 };
 
 help Gline {
@@ -689,6 +690,7 @@ help Gline {
 	" Example: GLINE *@*.idiot.net 900 :Spammers (Adds a 15 min G:line)";
 	"          GLINE *@*.idiot.net 1d5h :Spammers (Adds a 29 hour G:line)";
 	"          GLINE -*@*.idiot.net";
+	" NOTE: requires the can_gkline oper flag";
 };
 
 help Shun {
@@ -706,6 +708,7 @@ help Shun {
 	" Example: SHUN +foobar@aol.com 600 :Spamming";
 	"  (Shuns foobar@aol.com for 10 mins for Spamming)";
 	"          SHUN +foobar@aol.com 1d6h :Spamming (Adds a 30 hour SHUN)";
+	" NOTE: requires the can_gkline oper flag";
 };
 
 help Gzline {
@@ -720,6 +723,7 @@ help Gzline {
 	"          GZLINE -<user@host mask> (Removes a Global Z:line for user@host)";
 	" Example: GZLINE *@*.idiot.net 900 :Spammers (Adds a 15 min Global Z:line)";
 	"          GZLINE *@*.idiot.net 1d5h :Spammers (Adds a 29 hour Global Z:line)";
+	" NOTE: requires the can_gzline oper flag";
 };
 
 help Tkline {
@@ -922,11 +926,13 @@ help Rping {
 };
 
 help Trace {
-	" TRACE is useful to know what servers are connected to what.";
+	" You can use TRACE on servers or users.";
+	" When used on a user it will give you class and lag info.";
+	" If you use it on a server it gives you class/version/link info.";
 	" Sometimes TRACE can be confusing, especially if you are using";
 	" it for the first time.";
 	" -";
-	" Syntax:  TRACE <servername>";
+	" Syntax:  TRACE <servername|nickname>";
 	" Example: TRACE irc.fyremoon.net";
 };
 
